# BeepPager

./: README.md
docs/: system-design.md
mac-client/BeepPager/BeepPager/: AppDelegate.swift  Connection.swift  Protocol.swift  SessionManager.swift  SettingsView.swift  StateMachine.swift  SyncManager.swift  Utils.swift  ViewController.swift
mac-client/BeepPager/BeepPager.xcodeproj/: project.pbxproj
mac-client/BeepPager/BeepPager/Base.lproj/: Main.storyboard
server/: Cargo.toml
server/src/: handler.rs  mailbox.rs  main.rs  protocol.rs  state.rs
