[package]
name = "bp-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
uuid = "1.10"
tokio = { version = "1", features = ["full"] }
http = "1"
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum = { version = "0.7", features = ["ws"] }

[profile.release]
opt-level = 3
lto = true